--- a/notebooks/cleaning-data-2.ipynb
+++ b/notebooks/cleaning-data-2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4  {'id': 424, 'type': 'message', 'date': '2017-0...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[40333 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "4  424  Teddy Afro's 5th studio album,  #Ethiopia  wil...  2017-04-29T12:44:55"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "4  424  Teddy Afro's 5th studio album,  #Ethiopia  wil...  2017-04-29T12:44:55"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,6 @@
        "      <th>text</th>\n",
        "      <th>date</th>\n",
        "      <th>hashtags</th>\n",
-       "      <th>emojis</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -619,7 +618,6 @@
        "      <td></td>\n",
        "      <td>2017-04-01T22:09:30</td>\n",
        "      <td>[]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -627,7 +625,6 @@
        "      <td></td>\n",
        "      <td>2017-04-01T22:09:31</td>\n",
        "      <td>[]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -635,7 +632,6 @@
        "      <td>W E   H I T   1 K   😁 😁   🎆 🎇</td>\n",
        "      <td>2017-04-28T18:30:56</td>\n",
        "      <td>[]</td>\n",
-       "      <td>😁😁🎆🎇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -643,7 +639,6 @@
        "      <td></td>\n",
        "      <td>2017-04-29T12:42:05</td>\n",
        "      <td>[]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -651,7 +646,6 @@
        "      <td>Teddy Afro's 5th studio album,    will be rele...</td>\n",
        "      <td>2017-04-29T12:44:55</td>\n",
        "      <td>[#Ethiopia]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -665,15 +659,15 @@
        "3  423                                                      \n",
        "4  424  Teddy Afro's 5th studio album,    will be rele...   \n",
        "\n",
-       "                  date     hashtags emojis  \n",
-       "0  2017-04-01T22:09:30           []         \n",
-       "1  2017-04-01T22:09:31           []         \n",
-       "2  2017-04-28T18:30:56           []   😁😁🎆🎇  \n",
-       "3  2017-04-29T12:42:05           []         \n",
-       "4  2017-04-29T12:44:55  [#Ethiopia]         "
+       "                  date     hashtags  \n",
+       "0  2017-04-01T22:09:30           []  \n",
+       "1  2017-04-01T22:09:31           []  \n",
+       "2  2017-04-28T18:30:56           []  \n",
+       "3  2017-04-29T12:42:05           []  \n",
+       "4  2017-04-29T12:44:55  [#Ethiopia]  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +779,7 @@
        "40332  2024-01-04T11:08:01                []              "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +884,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]         "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1018,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]         "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1134,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]              '  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1244,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]              '  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1367,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]              '    []  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1483,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]              '    []  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1612,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]              '    []       []  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1734,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]              '    []       []  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1882,7 @@
        "4  2017-04-29T12:44:55  [#Ethiopia]              '    []       []  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1915,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2040,7 @@
        "[40333 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2057,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
