tokenizing our data

--- a/notebooks/Sentencepiece.ipynb
+++ b/notebooks/Sentencepiece.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "# train sentencepiece model from `TIKVAH.txt` and makes `m.model` and `m.vocab`\n",
     "# `m.vocab` is just a reference. not used in the segmentation.\n",
-    "spm.SentencePieceTrainer.train('--input=TIKVAH.txt --model_prefix=m --vocab_size=2000')\n",
+    "spm.SentencePieceTrainer.train('--input=yene-tube.txt --model_prefix=m --vocab_size=2000')\n",
     "\n",
     "# makes segmenter instance and loads the model file (m.model)\n",
     "sp = spm.SentencePieceProcessor()\n",
