supervised trainer notebook

--- a/semi-supervised_training(Mistral 7B)/semi-supervised-training notebook.ipynb
+++ b/semi-supervised_training(Mistral 7B)/semi-supervised-training notebook.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "\n",
+    "\"\"\"Loading accelerator for later use-case \"\"\"\n",
     "from accelerate import FullyShardedDataParallelPlugin, Accelerator\n",
     "from torch.distributed.fsdp.fully_sharded_data_parallel import FullOptimStateDictConfig, FullStateDictConfig\n",
     "fsdp_plugin = FullyShardedDataParallelPlugin(\n",
@@ -14,6 +15,32 @@
     "    optim_state_dict_config=FullOptimStateDictConfig(offload_to_cpu=True, rank0_only=False),\n",
     ")\n",
     "accelerator = Accelerator(fsdp_plugin=fsdp_plugin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load Base Model\n",
+    "Now, we load the Mistral 7B base model using 4-bit quantization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+    "base_model_id = \"mistralai/Mistral-7B-v0.1\"\n",
+    "bnb_config = BitsAndBytesConfig(\n",
+    "    load_in_4bit=True,\n",
+    "    bnb_4bit_use_double_quant=True,\n",
+    "    bnb_4bit_quant_type=\"nf4\",\n",
+    "    bnb_4bit_compute_dtype=torch.bfloat16\n",
+    ")\n",
+    "model = AutoModelForCausalLM.from_pretrained(base_model_id, quantization_config=bnb_config)"
    ]
   },
   {
@@ -71,76 +98,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tokenization steps using pretrained tokenizer from huggingface \n",
+    "(iocuydi/llama-2-amharic-3784m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"iocuydi/llama-2-amharic-3784m\")  # Load your trained tokenizer\n",
+    "\n",
+    "tokenizer.model_max_length = 512  # Set maximum sequence length\n",
+    "tokenizer.padding_side = \"left\"  # Set padding strategy\n",
+    "tokenizer.add_eos_token = True "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sentencepiece as spm\n",
-    "import torch\n",
-    "\n",
-    "# Load your SentencePiece tokenizer\n",
-    "sp = spm.SentencePieceProcessor(model_file=\"tokenizer.model\")\n",
-    "\n",
     "def tokenize(prompt):\n",
-    "    # Tokenize the text using SentencePiece\n",
-    "    tokenized_sequence = sp.EncodeAsIds(prompt)\n",
-    "\n",
-    "    # Padding and attention mask handling (adjust based on your tokenizer output)\n",
-    "    if len(tokenized_sequence) < 512:\n",
-    "        padding_length = 512 - len(tokenized_sequence)\n",
-    "        padded_sequence = tokenized_sequence + [0] * padding_length\n",
-    "        attention_mask = [1] * len(tokenized_sequence) + [0] * padding_length\n",
-    "    else:\n",
-    "        padded_sequence = tokenized_sequence[:512]\n",
-    "        attention_mask = [1] * 512\n",
-    "\n",
-    "    # Create labels (adjust if needed)\n",
-    "    labels = padded_sequence.copy()\n",
-    "\n",
-    "    # Convert lists to PyTorch tensors\n",
-    "    input_ids = torch.tensor(padded_sequence)\n",
-    "    attention_mask = torch.tensor(attention_mask)\n",
-    "    labels = torch.tensor(labels)\n",
-    "\n",
-    "    # Combine data into result dict\n",
-    "    return {\n",
-    "        \"input_ids\": input_ids,\n",
-    "        \"attention_mask\": attention_mask,\n",
-    "        \"labels\": labels\n",
-    "    }"
+    "    result = tokenizer(\n",
+    "        prompt,\n",
+    "        truncation=True,\n",
+    "        max_length=512,\n",
+    "        padding=\"max_length\",\n",
+    "    )\n",
+    "    result[\"labels\"] = result[\"input_ids\"].copy()\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instruction to the model and the description of the attributes for the model\n",
+    "to have context and instruct it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'eval_prompt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Model preparation and text generation\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model_input \u001b[38;5;241m=\u001b[39m tokenize(\u001b[43meval_prompt\u001b[49m)  \u001b[38;5;66;03m# Tokenize and create tensors\u001b[39;00m\n\u001b[1;32m      3\u001b[0m model_input \u001b[38;5;241m=\u001b[39m model_input\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# Move tensors to GPU if available\u001b[39;00m\n\u001b[1;32m      5\u001b[0m model\u001b[38;5;241m.\u001b[39meval()  \u001b[38;5;66;03m# Set model to evaluation mode\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'eval_prompt' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Model preparation and text generation\n",
-    "eval_prompt = \"This is a sample evaluationprompt for the model.\"\n",
-    "model_input = tokenize(eval_prompt)  # Tokenize and create tensors\n",
-    "model_input = model_input.to(\"cuda\")  # Move tensors to GPU if available\n",
+    "def generate_and_tokenize_prompt(data_point):\n",
+    "    text = data_point[\"text\"]\n",
+    "    labels = data_point[\"Human_Label\"]\n",
     "\n",
-    "model.eval()  # Set model to evaluation mode\n",
+    "    # Generate prompt template\n",
+    "    template = f\"\"\"Given an Amharic advertisement sentence:\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    generated_text = model.generate(**model_input, max_new_tokens=256, pad_token_id=2)[0]\n",
-    "    decoded_text = tokenize.decode(generated_text, skip_special_tokens=True)\n",
-    "    print(decoded_text)  # Print the generated text"
+    "\"{text}\"\n",
+    "\n",
+    "What are the main categories (tags) associated with this advertisement?\n",
+    "\n",
+    "Possible categories are: ['healthcare &pharma', 'Telecom', 'Media', 'financial service', 'consumer products', 'computing device', 'Realstate', 'retail', 'training', 'Entertainment', 'software development', 'Other']\n",
+    "\n",
+    "Target categories: \"{labels}\"\n",
+    "\"\"\"\n",
+    "\n",
+    "    # Tokenize the prompt\n",
+    "    return tokenize(template)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_train_dataset = train_dataset.map(generate_and_tokenize_prompt)\n",
+    "tokenized_val_dataset = validation_dataset.map(generate_and_tokenize_prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set Up LoRA\n",
+    "Now, we prepare the model for fine-tuning by applying LoRA adapters to the linear layers of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from peft import prepare_model_for_kbit_training\n",
+    "model.gradient_checkpointing_enable()\n",
+    "model = prepare_model_for_kbit_training(model)\n",
+    "\n",
+    "def print_trainable_parameters(model):\n",
+    "    \"\"\"\n",
+    "    Prints the number of trainable parameters in the model.\n",
+    "    \"\"\"\n",
+    "    trainable_params = 0\n",
+    "    all_param = 0\n",
+    "    for _, param in model.named_parameters():\n",
+    "        all_param += param.numel()\n",
+    "        if param.requires_grad:\n",
+    "            trainable_params += param.numel()\n",
+    "    print(\n",
+    "        f\"trainable params: {trainable_params} || all params: {all_param} || trainable%: {100 * trainable_params / all_param}\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from peft import LoraConfig, get_peft_model\n",
+    "config = LoraConfig(\n",
+    "    r=8,\n",
+    "    lora_alpha=16,\n",
+    "    target_modules=[\n",
+    "        \"q_proj\",\n",
+    "        \"k_proj\",\n",
+    "        \"v_proj\",\n",
+    "        \"o_proj\",\n",
+    "        \"gate_proj\",\n",
+    "        \"up_proj\",\n",
+    "        \"down_proj\",\n",
+    "        \"lm_head\",\n",
+    "    ],\n",
+    "    bias=\"none\",\n",
+    "    lora_dropout=0.05,  # Conventional\n",
+    "    task_type=\"CAUSAL_LM\",\n",
+    ")\n",
+    "model = get_peft_model(model, config)\n",
+    "print_trainable_parameters(model)\n",
+    "# Apply the accelerator. You can comment this out to remove the accelerator.\n",
+    "model = accelerator.prepare_model(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run Training\n",
+    "In this step, we start training the fine-tuned model. You can adjust the training parameters according to your needs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if torch.cuda.device_count() > 1: # If more than 1 GPU\n",
+    "    model.is_parallelizable = True\n",
+    "    model.model_parallel = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import transformers\n",
+    "from datetime import datetime\n",
+    "import sentencepiece as spm\n",
+    "\n",
+    "\n",
+    "\n",
+    "project = \"Mistral_Amharic-finetuning\"\n",
+    "base_model_name = \"mistral\"\n",
+    "run_name = base_model_name + \"-\" + project\n",
+    "output_dir = \"./\" + run_name\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
+    "\n",
+    "trainer = transformers.Trainer(\n",
+    "    model=model,\n",
+    "    train_dataset=tokenized_train_dataset,\n",
+    "    eval_dataset=tokenized_val_dataset,\n",
+    "    args=transformers.TrainingArguments(\n",
+    "        output_dir=output_dir,\n",
+    "        warmup_steps=5,\n",
+    "        per_device_train_batch_size=2,\n",
+    "        gradient_accumulation_steps=4,\n",
+    "        max_steps=1000,\n",
+    "        learning_rate=2.5e-5, # Want about 10x smaller than the Mistral learning rate\n",
+    "        logging_steps=50,\n",
+    "        bf16=True,\n",
+    "        optim=\"paged_adamw_8bit\",\n",
+    "        logging_dir=\"./logs\",        # Directory for storing logs\n",
+    "        save_strategy=\"steps\",       # Save the model checkpoint every logging step\n",
+    "        save_steps=50,                # Save checkpoints every 50 steps\n",
+    "        evaluation_strategy=\"steps\", # Evaluate the model every logging step\n",
+    "        eval_steps=50,               # Evaluate and save checkpoints every 50 steps\n",
+    "        do_eval=True,                # Perform evaluation at the end of training\n",
+    "        report_to=\"wandb\",           # Comment this out if you don't want to use weights & baises\n",
+    "        run_name=f\"{run_name}-{datetime.now().strftime('%Y-%m-%d-%H-%M')}\"          # Name of the W&B run (optional)\n",
+    "    ),\n",
+    "    data_collator=transformers.DataCollatorForLanguageModeling(tokenizer, mlm=False),\n",
+    ")\n",
+    "model.config.use_cache = False  # silence the warnings. Please re-enable for inference!\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
